y from stack to heap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "string.h": "c",
         "stdlib.h": "c",
-        "evp.h": "c"
+        "evp.h": "c",
+        "stdbool.h": "c"
     }
 }
