--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 CC = gcc
 OPENSSL_DIR = ../third_party/openssl/openssl-1.0.2l
 
-CFLAGS = -O2 -Wall -fopenmp -I$(OPENSSL_DIR)/include
+CFLAGS  = -O2 -Wall -fopenmp -I$(OPENSSL_DIR)/include
 LDFLAGS = -fopenmp $(OPENSSL_DIR)/libssl.a $(OPENSSL_DIR)/libcrypto.a -ldl
 
-all: ../prover ../verifier
+all: ../prover ../verifier ../sign
 
 ../prover: MPC_SHA256.o
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
@@ -12,8 +12,11 @@ all: ../prover ../verifier
 ../verifier: MPC_SHA256_VERIFIER.o
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
+../sign: WOTS_Sign.o
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o ../prover ../verifier ../out* ../proof.bin
+	rm -f *.o src/*.o ../prover ../verifier ../sign ../out* ../proof.bin
