--- a/src/Makefile
+++ b/src/Makefile
@@ -6,8 +6,20 @@ LDFLAGS = -fopenmp $(OPENSSL_DIR)/libssl.a $(OPENSSL_DIR)/libcrypto.a -ldl
 
 all: ../prover ../verifier ../sign
 
-../prover: MPC_SHA256.o
+../prover: prover.o shared.o MPC_prove_functions.o building_views.o
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+shared.o: shared.c shared.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+prover.o: prover.c shared.h MPC_prove_functions.h building_views.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+MPC_prove_functions.o: MPC_prove_functions.c MPC_prove_functions.h shared.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+building_views.o: building_views.c building_views.h MPC_prove_functions.h shared.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 ../verifier: MPC_SHA256_VERIFIER.o
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
