--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "stdbool.h": "c",
         "rand.h": "c",
         "building_views.h": "c",
-        "omp.h": "c"
+        "omp.h": "c",
+        "mpc_prove_functions.h": "c",
+        "stdio.h": "c"
     }
 }
